--- a/Hotel.ATR1.RealPortal/Hotel.ATR1.RealPortal.csproj
+++ b/Hotel.ATR1.RealPortal/Hotel.ATR1.RealPortal.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
@@ -17,6 +21,8 @@
 
   <ItemGroup>
     <Folder Include="Logs\" />
+    <Folder Include="NewFolder\" />
+    <Folder Include="Resources\Controllers\" />
   </ItemGroup>
 
 </Project>
